k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: notes-app
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
