k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: notes-app
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
